--- a/index.html
+++ b/index.html
@@ -748,6 +748,9 @@
             <div class="profile-footer">
 
                 <div class="social-links">
+                    <a href="https://www.roblox.com/users/3838965871/profile" target="_blank">
+                        <img src="assets/roblox.png" alt="Roblox" class="social-icon">
+                    </a>
                     <a href="https://open.spotify.com/user/s1y2bdypk79eb6emd0ymtxrmc?trackId=61iJknbAXSuBflDz3vSQ0b" target="_blank">
                         <img src="assets/spotify.png" alt="Spotify" class="social-icon">
                     </a>
