--- a/index.html
+++ b/index.html
@@ -850,13 +850,13 @@
                             <div class="badge-box-inner">
                                 <div class="badge-group">
                                     <div class="badge-container">
-                                        <img src="assets/transflag.png" alt="Girl" class="badge">
-                                        <span class="tooltip">Girl</span>
-                                    </div>
-                                    <div class="badge-container">
                                         <img src="assets/lesbianflag.png" alt="Lesbian" class="badge">
                                         <span class="tooltip">Lesbian</span>
-                                    </div>                                    
+                                    </div>   
+                                    <div class="badge-container">
+                                        <img src="assets/female.png" alt="Girl" class="badge">
+                                        <span class="tooltip">Girl</span>
+                                    </div>                                 
                                 </div>
                             </div>
                         </div>
